# react-native-zip-archive

./: OAT.xml  README.OpenSource  README.md  index.d.ts  index.js  package-lock.json  package.json
harmony/zipArchive/: build-profile.json5  oh-package-lock.json5  oh-package.json5
harmony/zipArchive/libs/arm64-v8a/lib/cmake/: minizip-config.cmake
harmony/zipArchive/src/main/cpp/napi/: minizip.cpp  minizipNapi.cpp  minizipNapi.h
harmony/zipArchive/src/main/cpp/types/libentry/: index.d.ts
harmony/zipArchive/src/main/ets/: ZipArchivePackage.ts
harmony/zipArchive_package/: Index.ets  oh-package-lock.json5  oh-package.json5  ts.ts
harmony/zipArchive_package/libs/arm64-v8a/: libminizip.so.4
harmony/zipArchive_package/libs/arm64-v8a/lib/: libzstd.so.1
harmony/zipArchive_package/libs/arm64-v8a/lib/pkgconfig/: minizip.pc
harmony/zipArchive_package/src/main/: module.json5
harmony/zipArchive_package/src/main/cpp/: CMakeLists.txt
harmony/zipArchive_package/src/main/cpp/napi/: minizip.cpp  minizip.h  minizipNapi.cpp  minizipNapi.h  mz_zip_rw.cpp  mz_zip_rw.h
harmony/zipArchive_package/src/main/cpp/types/libentry/: index.d.ts  oh-package.json5
harmony/zipArchive_package/src/main/ets/: Logger.ts  ZipArchivePackage.ts  ZipArchiveTurboModule.ts
harmony/zipArchive_package/src/main/ets/entryability/: EntryAbility.ets
src/: NativeZipArchive.ts
